# parsing_tools

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
code/: _cities_tool.py  _script.py  _test_script.py  _update_models.py  async_requests.py  cities_tool.py  collecting.py  config.py  configurating.py  errors.py  instances.py  parsing.py  post_collectors.py  post_parsers.py  requesting.py  rest.py  service.py  tools.py
code/static/: _temp.html  _temp.json  drom_auto_cities.json
drom_ru/: _test_script.py  cities_tool.py  models_tool.py  parser.py
drom_ru/static/: _temp.html  drom_auto_cities.json  drom_auto_models.json
static/: avito_cities.json  cirilic_city_to_city.json  drom_cities.json
