[tool.poetry]
name = "parsing-tools"
version = "0.1.0"
description = ""
authors = ["Alexander Chekhov <chekhovsasha4737@gmail.com>"]
readme = "README.md"
packages = [{include = "parsing_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.1"
wheel = "^0.37.1"
lxml = {path = "libs/lxml-4.9.0-cp311-cp311-win_amd64.whl"}
requests = "^2.28.1"
selenium = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
