[tool.poetry]
name = "parsing-tools"
version = "0.1.0"
description = ""
authors = ["Alexander Chekhov <chekhovsasha4737@gmail.com>"]
readme = "README.md"
packages = [{include = "parsing_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.1"
wheel = "^0.37.1"
lxml = {path = "libs/lxml-4.9.0-cp311-cp311-win_amd64.whl"}
requests = "^2.28.1"
selenium = "^4.5.0"
aiohttp = "^3.8.3"
aiodns = "^3.0.0"
pydantic = "^1.10.2"
fake-headers = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
